--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-﻿
+﻿cmake_minimum_required (VERSION 3.11)
+
+set(CMAKE_CXX_STANDARD 23)
 
 if(MSVC)
     # Генерируем статическую заглушку для динамических библиотек
